# AI4SVP-BENCH

./: CMakeLists.txt  ENUM_test.py  LICENSE  README.md  build.sh  test.cpp  test1.cpp  test2.cpp  test_lattice.py  test_lattice_env.py
build_v1/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_v2/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
include/: core.h  lattice.h
pybind/: PyLatticeEnv.cpp  PyLatticeEnv.h  RL_ENUM_Wrapper.cpp  RL_ENUM_Wrapper.h  enum_state.h  pybind_wrapper.cpp
python/: debug.py  enum_environment.py  eval.py  lattice_env_.py  plug.py  ppo_agent.py  requirements.txt  svp_hyperopt.py  test_plug.py  test_pro.py  test_pro_1.py  test_pro_2.py  train_rl_enum.py
python/checkpoints/: rl_enum_ep0.pt  (+9 more)
reference/: fund.html  index.html  latsetting.html  reduction.html  solvelatprob.html  style.css
sieve/: ai_enhanced_sieve.py  ajtai_generator.py  center_match_model.pth  config.py  data_collector.py  g_sieve.py  k_sieve.py  kg_sieve.py  main.py  model.py  nv_sieve.py  nv_sieve_data_20d.pkl  nv_sieve_data_90d.pkl  sample.py  sieve.py  svp_result_dim100_seed0.txt  svp_result_dim100_seed9.txt  svp_result_dim110_seed0.txt  svp_result_dim120_seed0.txt  svp_result_dim150_seed0.txt  svp_result_dim40_seed0.txt  svp_result_dim40_seed9.txt  svp_result_dim50_seed0.txt  svp_result_dim60_seed0.txt  svp_result_dim70_seed0.txt  svp_result_dim80_seed0.txt  svp_result_dim90_seed0.txt  trainer.py  utils.py
src/: babai_near_plane.cpp  bkz.cpp  cholesky_fact.cpp  core.cpp  deep_bkz.cpp  deep_lll.cpp  dual_bkz.cpp  dual_deep_bkz.cpp  dual_deep_lll.cpp  dual_enum.cpp  dual_lll.cpp  dual_pot_lll.cpp  enum.cpp  hkz.cpp  l2.cpp  lattice.cpp  lll.cpp  pot_bkz.cpp  pot_enum.cpp  pot_lll.cpp  rhf.cpp  size.cpp  sl.cpp
svp_challenge_list/: svp_challenge_100_0.txt  svp_challenge_100_1.txt  svp_challenge_100_2.txt  svp_challenge_100_3.txt  svp_challenge_100_4.txt  svp_challenge_100_5.txt  svp_challenge_100_6.txt  svp_challenge_100_7.txt  svp_challenge_100_8.txt  svp_challenge_100_9.txt  svp_challenge_110_0.txt  svp_challenge_110_1.txt  svp_challenge_110_2.txt  svp_challenge_110_3.txt  svp_challenge_110_4.txt  svp_challenge_110_5.txt  svp_challenge_110_6.txt  svp_challenge_110_7.txt  svp_challenge_110_8.txt  svp_challenge_110_9.txt  svp_challenge_120_0.txt  svp_challenge_120_1.txt  svp_challenge_120_2.txt  svp_challenge_120_3.txt  svp_challenge_120_4.txt  svp_challenge_120_5.txt  svp_challenge_120_6.txt  svp_challenge_120_7.txt  svp_challenge_120_8.txt  svp_challenge_120_9.txt  svp_challenge_130_0.txt  svp_challenge_130_1.txt  svp_challenge_130_2.txt  svp_challenge_130_3.txt  svp_challenge_130_4.txt  svp_challenge_130_5.txt  svp_challenge_130_6.txt  svp_challenge_130_7.txt  svp_challenge_130_8.txt  svp_challenge_130_9.txt  (+130 more)
(+439 files in other folders)
